WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
22094
For calls with missing object marker for this, callee is passed caller's lexical global object.
https://bugs.webkit.org/show_bug.cgi?id=22094
Summary
For calls with missing object marker for this, callee is passed caller's lexi...
Gavin Barraclough
Reported
2008-11-05 18:55:29 PST
This is incorrect for cross window call's, the callee should be receiving it's own lexical global object, not the caller's.
Attachments
The patch
(7.86 KB, patch)
2008-11-05 18:59 PST
,
Gavin Barraclough
mjs
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Gavin Barraclough
Comment 1
2008-11-05 18:59:54 PST
Created
attachment 24932
[details]
The patch
Maciej Stachowiak
Comment 2
2008-11-05 19:20:22 PST
Comment on
attachment 24932
[details]
The patch r=me
Gavin Barraclough
Comment 3
2008-11-06 17:33:01 PST
fixed in 38148
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug