JavaScriptCore/VM/CTI.cpp
@@ -628,10 +628,9 @@ void CTI::compileOpCall(OpcodeID opcodeID, Instruction* instruction, unsigned i,
     // Setup this value as the first argument (does not apply to constructors)
     if (opcodeID != op_construct) {
         int thisVal = instruction[3].u.operand;
-        if (thisVal == missingThisObjectMarker()) {
-            // FIXME: should this be loaded dynamically off m_callFrame?
-            m_jit.movl_i32m(asInteger(m_callFrame->globalThisValue()), firstArg * sizeof(Register), X86::edi);
-        } else {
+        if (thisVal == missingThisObjectMarker())
+            m_jit.movl_i32m(asInteger(jsNull()), firstArg * sizeof(Register), X86::edi);
+        else {
             emitGetArg(thisVal, X86::eax);
             emitPutResult(firstArg);
         }
