JavaScriptCore/runtime/JSImmediate.h
@@ -233,6 +233,7 @@ namespace JSC {
         static double toDouble(JSValue*);
         static bool toBoolean(JSValue*);
         static JSObject* toObject(JSValue*, ExecState*);
+        static JSObject* toThisObject(JSValue*, ExecState*);
         static UString toString(JSValue*);
 
         static bool getUInt32(JSValue*, uint32_t&);
